# halo2-base64

./: Cargo.toml  README.md
src/: base64.rs  lib.rs
src/table/: mod.rs
