[package]
name = "halo2-base64"
version = "0.1.0"
edition = "2021"

[features]
dev-graph = ["halo2-base/dev-graph", "plotters"]

[dependencies]
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
    "dev-graph"
], git = "https://github.com/axiom-crypto/halo2-lib.git" }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
base64 = "0.21"

# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2022_10_22", features = ["dev-graph"]}

rand_chacha = "0.3.1"
json = "0.12.4"
lazy_static = "1.4.0"
once_cell = "1.17.0"
rand = "0.8.5"

# aggregation
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v2023_01_30", default-features = false, features = ["loader_halo2"], optional = true }
snark_verifier_sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", package = "snark-verifier-sdk" }
